# TTView

./: Cargo.toml  LICENSE  README.md
.github/workflows/: auto_publish.yml
src/: main.rs  resizing.rs  styling.rs
