[package]
name = "ttview"
version = "0.6.0"
edition = "2024"
description = "Terminal Image Viewer"
license = "MIT"
repository = "https://github.com/phkeese/TTView"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
image = "0.25.6"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
